--- a/index.html
+++ b/index.html
@@ -15,39 +15,49 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-    <header class="page-header">
-      <nav>
-        <a href="#" class="logo">Web <span class="logo-accent">Studio</span></a>
-        <ul class="nav-list">
-          <li>
-            <a href="./index.html" class="link current">Студия</a>
+    <header class="header">
+      <div class="container">
+        <nav class="header-nav">
+          <a href="#" class="logo"
+            >Web <span class="logo-accent">Studio</span></a
+          >
+          <ul class="nav-list">
+            <li class="list">
+              <a href="./index.html" class="link current">Студия</a>
+            </li>
+            <li class="list">
+              <a href="./portfolio.html" class="link">Портфолио</a>
+            </li>
+            <li class="list">
+              <a href="#" class="link">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="contact-list">
+          <li class="list">
+            <img
+              src="./images/main/envelope(hover).svg"
+              alt="иконка почты"
+              class="icon"
+            />
+            <a href="mailto:nfo@devstudio.com" class="link"
+              >info@devstudio.com
+            </a>
           </li>
-          <li>
-            <a href="./portfolio.html" class="link">Портфолио</a>
-          </li>
-          <li>
-            <a href="#" class="link">Контакты</a>
+          <li class="list">
+            <img
+              src="./images/main/smartphone.svg"
+              alt="иконка телефона"
+              class="icon"
+            />
+            <a href="tel:+380961111111" class="link">+38 096 111 11 11 </a>
           </li>
         </ul>
-      </nav>
-      <ul class="contact-list">
-        <li>
-          <a href="mailto:nfo@devstudio.com" class="link"
-            >info@devstudio.com
-            <img src="./images/main/envelope(hover).svg" alt="иконка почты" />
-          </a>
-        </li>
-        <li>
-          <a href="tel:+380961111111" class="link"
-            >+38 096 111 11 11
-            <img src="./images/main/smartphone.svg" alt="иконка телефона" />
-          </a>
-        </li>
-      </ul>
+      </div>
     </header>
     <!-- hero -->
     <section class="hero">
-      <div>
+      <div class="container">
         <h1 class="title">Эффективные решения для вашего бизнеса</h1>
         <a href="" class="button primary">Заказать услугу</a>
         <img src="./images/main/Header-img.png" alt="фон" width="1600" />
@@ -59,54 +69,72 @@
     <main>
       <section class="benefits">
         <h2>Наши преимущества</h2>
-        <ul>
-          <li>
-            <img src="./images/main/icon1.svg" alt="иконка спутника" />
-            <h3 class="title">Внимание к деталям</h3>
-            <p class="subtitle">
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
-          <li>
-            <img src="./images/main/icon2.svg" alt="иконка часов" />
-            <h3 class="title">Пунктуальность</h3>
-            <p class="subtitle">
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </p>
-          </li>
-          <li>
-            <img src="./images/main/icon3.svg" alt="иконка компьютера" />
-            <h3 class="title">Планирование</h3>
-            <p class="subtitle">
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <li>
-            <img src="./images/main/icon4.svg" alt="иконка космонавта" />
-            <h3 class="title">Современные технологии</h3>
-            <p class="subtitle">
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <ul class="list">
+            <li class="block">
+              <img
+                src="./images/main/icon1.svg"
+                alt="иконка спутника"
+                class="image"
+              />
+              <h3 class="title">Внимание к деталям</h3>
+              <p class="subtitle">
+                Идейные соображения, а также начало повседневной работы по
+                формированию позиции.
+              </p>
+            </li>
+            <li class="block">
+              <img
+                src="./images/main/icon2.svg"
+                alt="иконка часов"
+                class="image"
+              />
+              <h3 class="title">Пунктуальность</h3>
+              <p class="subtitle">
+                Задача организации, в особенности же рамки и место обучения
+                кадров влечет за собой.
+              </p>
+            </li>
+            <li class="block">
+              <img
+                src="./images/main/icon3.svg"
+                alt="иконка компьютера"
+                class="image"
+              />
+              <h3 class="title">Планирование</h3>
+              <p class="subtitle">
+                Равным образом консультация с широким активом в значительной
+                степени обуславливает.
+              </p>
+            </li>
+            <li class="block">
+              <img
+                src="./images/main/icon4.svg"
+                alt="иконка космонавта"
+                class="image"
+              />
+              <h3 class="title">Современные технологии</h3>
+              <p class="subtitle">
+                Значимость этих проблем настолько очевидна, что реализация
+                плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Чем занимаемся -->
       <section class="about-us">
         <h2 class="heading">Чем мы занимаемся</h2>
         <ul class="list">
-          <li>
+          <li class="block">
             <img src="./images/main/img-box1.png" alt="компьютер" />
             <h3 class="title">Десктопные приложения</h3>
           </li>
-          <li>
+          <li class="block">
             <img src="./images/main/img-box2.png" alt="смартфон" />
             <h3 class="title">Мобильные приложения</h3>
           </li>
-          <li>
+          <li class="block">
             <img src="./images/main/img-box3.png" alt="монитор" />
             <h3 class="title">Дизайнерские решения</h3>
           </li>
@@ -114,171 +142,179 @@
       </section>
       <!-- Наша команда -->
       <section class="team">
-        <h2 class="heading">Наша команда</h2>
-        <ul class="list">
-          <li>
-            <img src="./images/main/person1.png" alt="член команды" />
-            <h3 class="name">John Smith</h3>
-            <p class="subtitle">Product Designer</p>
-            <ul class="social-list">
-              <li>
-                <a href="https://instagram.com" target="_blank">
-                  <img src="./images/main/social/1.svg" alt="инстаграм" />
-                </a>
-              </li>
-              <li>
-                <a href="https://twitter.com" target="_blank">
-                  <img src="./images/main/social/2.svg" alt="твиттер" />
-                </a>
-              </li>
-              <li>
-                <a href="https://facebook.com" target="_blank">
-                  <img src="./images/main/social/3.svg" alt="фейсбук" />
-                </a>
-              </li>
-              <li>
-                <a href="https://linkedin.com" target="_blank">
-                  <img src="./images/main/social/4.svg" alt="линкедин" />
-                </a>
-              </li>
-            </ul>
-          </li>
-          <li>
-            <img src="./images/main/person2.png" alt="член команды" />
-            <h3 class="name">Marta Stewart</h3>
-            <p class="subtitle">Frontend Developer</p>
-            <ul class="social-list">
-              <li>
-                <a href="https://instagram.com" target="_blank">
-                  <img src="./images/main/social/1.svg" alt="инстаграм" />
-                </a>
-              </li>
-              <li>
-                <a href="https://twitter.com" target="_blank">
-                  <img src="./images/main/social/2.svg" alt="твиттер" />
-                </a>
-              </li>
-              <li>
-                <a href="https://facebook.com" target="_blank">
-                  <img src="./images/main/social/3.svg" alt="фейсбук" />
-                </a>
-              </li>
-              <li>
-                <a href="https://linkedin.com" target="_blank">
-                  <img src="./images/main/social/4.svg" alt="линкедин" />
-                </a>
-              </li>
-            </ul>
-          </li>
-          <li>
-            <img src="./images/main/person3.png" alt="член команды" />
-            <h3 class="name">Robert Jaki</h3>
-            <p class="subtitle">Marketing</p>
-            <ul class="social-list">
-              <li>
-                <a href="https://instagram.com" target="_blank">
-                  <img src="./images/main/social/1.svg" alt="инстаграм" />
-                </a>
-              </li>
-              <li>
-                <a href="https://twitter.com" target="_blank">
-                  <img src="./images/main/social/2.svg" alt="твиттер" />
-                </a>
-              </li>
-              <li>
-                <a href="https://facebook.com" target="_blank">
-                  <img src="./images/main/social/3.svg" alt="фейсбук" />
-                </a>
-              </li>
-              <li>
-                <a href="https://linkedin.com" target="_blank">
-                  <img src="./images/main/social/4.svg" alt="линкедин" />
-                </a>
-              </li>
-            </ul>
-          </li>
-          <li>
-            <img src="./images/main/person4.png" alt="член команды" />
-            <h3 class="name">Martin Do</h3>
-            <p class="subtitle">UI Designer</p>
-            <ul class="social-list">
-              <li>
-                <a href="https://instagram.com" target="_blank">
-                  <img src="./images/main/social/1.svg" alt="инстаграм" />
-                </a>
-              </li>
-              <li>
-                <a href="https://twitter.com" target="_blank">
-                  <img src="./images/main/social/2.svg" alt="твиттер" />
-                </a>
-              </li>
-              <li>
-                <a href="https://facebook.com" target="_blank">
-                  <img src="./images/main/social/3.svg" alt="фейсбук" />
-                </a>
-              </li>
-              <li>
-                <a href="https://linkedin.com" target="_blank">
-                  <img src="./images/main/social/4.svg" alt="линкедин" />
-                </a>
-              </li>
-            </ul>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="heading">Наша команда</h2>
+          <ul class="list">
+            <li class="block">
+              <img
+                src="./images/main/person1.png"
+                alt="член команды"
+                class="image"
+              />
+              <h3 class="name">John Smith</h3>
+              <p class="subtitle">Product Designer</p>
+              <ul class="social-list">
+                <li>
+                  <a href="https://instagram.com" target="_blank">
+                    <img src="./images/main/social/1.svg" alt="инстаграм" />
+                  </a>
+                </li>
+                <li>
+                  <a href="https://twitter.com" target="_blank">
+                    <img src="./images/main/social/2.svg" alt="твиттер" />
+                  </a>
+                </li>
+                <li>
+                  <a href="https://facebook.com" target="_blank">
+                    <img src="./images/main/social/3.svg" alt="фейсбук" />
+                  </a>
+                </li>
+                <li>
+                  <a href="https://linkedin.com" target="_blank">
+                    <img src="./images/main/social/4.svg" alt="линкедин" />
+                  </a>
+                </li>
+              </ul>
+            </li>
+            <li class="block">
+              <img src="./images/main/person2.png" alt="член команды" />
+              <h3 class="name">Marta Stewart</h3>
+              <p class="subtitle">Frontend Developer</p>
+              <ul class="social-list">
+                <li>
+                  <a href="https://instagram.com" target="_blank">
+                    <img src="./images/main/social/1.svg" alt="инстаграм" />
+                  </a>
+                </li>
+                <li>
+                  <a href="https://twitter.com" target="_blank">
+                    <img src="./images/main/social/2.svg" alt="твиттер" />
+                  </a>
+                </li>
+                <li>
+                  <a href="https://facebook.com" target="_blank">
+                    <img src="./images/main/social/3.svg" alt="фейсбук" />
+                  </a>
+                </li>
+                <li>
+                  <a href="https://linkedin.com" target="_blank">
+                    <img src="./images/main/social/4.svg" alt="линкедин" />
+                  </a>
+                </li>
+              </ul>
+            </li>
+            <li class="block">
+              <img src="./images/main/person3.png" alt="член команды" />
+              <h3 class="name">Robert Jaki</h3>
+              <p class="subtitle">Marketing</p>
+              <ul class="social-list">
+                <li>
+                  <a href="https://instagram.com" target="_blank">
+                    <img src="./images/main/social/1.svg" alt="инстаграм" />
+                  </a>
+                </li>
+                <li>
+                  <a href="https://twitter.com" target="_blank">
+                    <img src="./images/main/social/2.svg" alt="твиттер" />
+                  </a>
+                </li>
+                <li>
+                  <a href="https://facebook.com" target="_blank">
+                    <img src="./images/main/social/3.svg" alt="фейсбук" />
+                  </a>
+                </li>
+                <li>
+                  <a href="https://linkedin.com" target="_blank">
+                    <img src="./images/main/social/4.svg" alt="линкедин" />
+                  </a>
+                </li>
+              </ul>
+            </li>
+            <li class="block">
+              <img src="./images/main/person4.png" alt="член команды" />
+              <h3 class="name">Martin Do</h3>
+              <p class="subtitle">UI Designer</p>
+              <ul class="social-list">
+                <li>
+                  <a href="https://instagram.com" target="_blank">
+                    <img src="./images/main/social/1.svg" alt="инстаграм" />
+                  </a>
+                </li>
+                <li>
+                  <a href="https://twitter.com" target="_blank">
+                    <img src="./images/main/social/2.svg" alt="твиттер" />
+                  </a>
+                </li>
+                <li>
+                  <a href="https://facebook.com" target="_blank">
+                    <img src="./images/main/social/3.svg" alt="фейсбук" />
+                  </a>
+                </li>
+                <li>
+                  <a href="https://linkedin.com" target="_blank">
+                    <img src="./images/main/social/4.svg" alt="линкедин" />
+                  </a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Наши клиенты -->
       <section class="clients">
-        <h2 class="heading">Постоянные клиенты</h2>
-        <ul class="list">
-          <li>
-            <a href="https://google.com/" target="_blank">
-              <img
-                src="./images/main/brands/logo1.svg"
-                alt="логотип компании"
-              />
-            </a>
-          </li>
-          <li>
-            <a href="https://google.com/" target="_blank">
-              <img
-                src="./images/main/brands/logo2.svg"
-                alt="логотип компании"
-              />
-            </a>
-          </li>
-          <li>
-            <a href="https://google.com/" target="_blank">
-              <img
-                src="./images/main/brands/logo3.svg"
-                alt="логотип компании"
-              />
-            </a>
-          </li>
-          <li>
-            <a href="https://google.com/" target="_blank">
-              <img
-                src="./images/main/brands/logo4.svg"
-                alt="логотип компании"
-              />
-            </a>
-          </li>
-          <li>
-            <a href="https://google.com/" target="_blank">
-              <img
-                src="./images/main/brands/logo5.svg"
-                alt="логотип компании"
-              />
-            </a>
-          </li>
-          <li>
-            <a href="https://google.com/" target="_blank">
-              <img
-                src="./images/main/brands/logo6.svg"
-                alt="логотип компании"
-              />
-            </a>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="heading">Постоянные клиенты</h2>
+          <ul class="list">
+            <li class="brand">
+              <a href="https://google.com/" target="_blank">
+                <img
+                  src="./images/main/brands/logo1.svg"
+                  alt="логотип компании"
+                />
+              </a>
+            </li>
+            <li class="brand">
+              <a href="https://google.com/" target="_blank">
+                <img
+                  src="./images/main/brands/logo2.svg"
+                  alt="логотип компании"
+                />
+              </a>
+            </li>
+            <li class="brand">
+              <a href="https://google.com/" target="_blank">
+                <img
+                  src="./images/main/brands/logo3.svg"
+                  alt="логотип компании"
+                />
+              </a>
+            </li>
+            <li class="brand">
+              <a href="https://google.com/" target="_blank">
+                <img
+                  src="./images/main/brands/logo4.svg"
+                  alt="логотип компании"
+                />
+              </a>
+            </li>
+            <li class="brand">
+              <a href="https://google.com/" target="_blank">
+                <img
+                  src="./images/main/brands/logo5.svg"
+                  alt="логотип компании"
+                />
+              </a>
+            </li>
+            <li class="brand">
+              <a href="https://google.com/" target="_blank">
+                <img
+                  src="./images/main/brands/logo6.svg"
+                  alt="логотип компании"
+                />
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
