поправил ширину контента

--- a/index.html
+++ b/index.html
@@ -124,21 +124,23 @@
       </section>
       <!-- Чем занимаемся -->
       <section class="about-us">
-        <h2 class="heading">Чем мы занимаемся</h2>
-        <ul class="list">
-          <li class="block">
-            <img src="./images/main/img-box1.png" alt="компьютер" />
-            <h3 class="title">Десктопные приложения</h3>
-          </li>
-          <li class="block">
-            <img src="./images/main/img-box2.png" alt="смартфон" />
-            <h3 class="title">Мобильные приложения</h3>
-          </li>
-          <li class="block">
-            <img src="./images/main/img-box3.png" alt="монитор" />
-            <h3 class="title">Дизайнерские решения</h3>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="heading">Чем мы занимаемся</h2>
+          <ul class="list">
+            <li class="block">
+              <img src="./images/main/img-box1.png" alt="компьютер" />
+              <h3 class="title">Десктопные приложения</h3>
+            </li>
+            <li class="block">
+              <img src="./images/main/img-box2.png" alt="смартфон" />
+              <h3 class="title">Мобильные приложения</h3>
+            </li>
+            <li class="block">
+              <img src="./images/main/img-box3.png" alt="монитор" />
+              <h3 class="title">Дизайнерские решения</h3>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Наша команда -->
       <section class="team">
@@ -321,22 +323,27 @@
     <!-- footer -->
 
     <footer class="footer">
-      <a href="#" class="logo"
-        >Web <span class="logo-accent-footer">Studio</span></a
-      >
-      <ul class="list">
-        <li>
-          <p>г. Киев, пр-т Леси Украинки, 26</p>
-        </li>
-        <li>
-          <a href="mailto:nfo@devstudio.com" class="link">info@devstudio.com</a>
-        </li>
-        <li>
-          <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
-        </li>
-      </ul>
-      <h3 class="subscribe">присоединяйтесь</h3>
-      <nav>
+      <div class="container">
+        <a href="#" class="logo"
+          >Web <span class="logo-accent-footer">Studio</span></a
+        >
+        <nav>
+          <ul class="list">
+            <li>
+              <p>г. Киев, пр-т Леси Украинки, 26</p>
+            </li>
+            <li>
+              <a href="mailto:nfo@devstudio.com" class="link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </nav>
+        <h3 class="subscribe">присоединяйтесь</h3>
+
         <ul class="social-list">
           <li>
             <a href="https://instagram.com" target="_blank">
@@ -359,7 +366,7 @@
             </a>
           </li>
         </ul>
-      </nav>
+      </div>
     </footer>
   </body>
 </html>
