--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
+    <!-- header -->
     <header class="header">
       <div class="container">
         <nav class="header-nav">
