--- a/portfolio.html
+++ b/portfolio.html
@@ -16,41 +16,54 @@
   </head>
   <body>
     <!-- header -->
-    <header class="page-header">
-      <nav>
-        <a href="#" class="logo">Web <span class="logo-accent">Studio</span></a>
-        <ul>
-          <li>
-            <a href="./index.html" class="link">Студия</a>
+    <header class="header">
+      <div class="container">
+        <nav class="header-nav">
+          <a href="#" class="logo"
+            >Web <span class="logo-accent">Studio</span></a
+          >
+          <ul class="nav-list">
+            <li class="list">
+              <a href="./index.html" class="link">Студия</a>
+            </li>
+            <li class="list">
+              <a href="./portfolio.html" class="link current">Портфолио</a>
+            </li>
+            <li class="list">
+              <a href="#" class="link">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="contact-list">
+          <li class="list">
+            <img
+              src="./images/main/envelope(hover).svg"
+              alt="иконка почты"
+              class="icon"
+            />
+            <a href="mailto:nfo@devstudio.com" class="link-contact"
+              >info@devstudio.com
+            </a>
           </li>
-          <li>
-            <a href="./portfolio.html" class="link current">Портфолио</a>
-          </li>
-          <li>
-            <a href="#" class="link">Контакты</a>
+          <li class="list">
+            <img
+              src="./images/main/smartphone.svg"
+              alt="иконка телефона"
+              class="icon"
+            />
+            <a href="tel:+380961111111" class="link-contact"
+              >+38 096 111 11 11
+            </a>
           </li>
         </ul>
-      </nav>
-      <ul>
-        <li>
-          <a href="mailto:nfo@devstudio.com" class="link"
-            >info@devstudio.com
-            <img src="./images/main/envelope(hover).svg" alt="иконка почты" />
-          </a>
-        </li>
-        <li>
-          <a href="tel:+380961111111" class="link"
-            >+38 096 111 11 11
-            <img src="./images/main/smartphone.svg" alt="иконка телефона" />
-          </a>
-        </li>
-      </ul>
+      </div>
     </header>
     <main>
       <!-- portfolio -->
 
       <section class="portfolio">
-        <h1>Наши работы</h1>
+        <div class="content">
+        <h1 class="heading">Наши работы</h1>
         <nav>
           <ul class="portfolio nav">
             <li>
@@ -72,9 +85,11 @@
         </nav>
 
         <ul class="list">
-          <li>
-            <a href="#" class="portfolio-block">
-              <img src="./images/portfolio/img-1.png" alt="ноутбук" />
+          <div class="block">
+          <li class="box">
+            <a href="#" class="link">
+              <img src="./images/portfolio/img-1.png" alt="ноутбук" class="image"/>
+              <div class="box-content">
               <h3 class="title">Технокряк</h3>
               <p class="subtitle">Веб-сайт</p>
               <p class="text">
@@ -82,11 +97,13 @@
                 Компании используют эту платформу для цифрового шпионажа и атак
                 на защищённые сервера конкурентов.
               </p>
+              </div>
             </a>
           </li>
-          <li>
-            <a href="#" class="portfolio-block">
-              <img src="./images/portfolio/img-2.png" alt="ноутбук" />
+          <li class="box">
+            <a href="#" class="link">
+              <img src="./images/portfolio/img-2.png" alt="ноутбук" class="image"/>
+              <div class="box-content">
               <h3 class="title">Постер New Orlean vs Golden Stars</h3>
               <p class="subtitle">Дизайн</p>
               <p class="text">
@@ -94,11 +111,13 @@
                 Компании используют эту платформу для цифрового шпионажа и атак
                 на защищённые сервера конкурентов.
               </p>
+              </div>
             </a>
           </li>
-          <li>
-            <a href="#" class="portfolio-block">
-              <img src="./images/portfolio/img-3.png" alt="ноутбук" />
+          <li class="box">
+            <a href="#" class="link">
+              <img src="./images/portfolio/img-3.png" alt="ноутбук" class="image"/>
+              <div class="box-content">
               <h3 class="title">Ресторан Seafood</h3>
               <p class="subtitle">Приложение</p>
               <p class="text">
@@ -106,12 +125,15 @@
                 Компании используют эту платформу для цифрового шпионажа и атак
                 на защищённые сервера конкурентов.
               </p>
+              </div>
             </a>
           </li>
-
-          <li>
-            <a href="#" class="portfolio-block">
-              <img src="./images/portfolio/img-4.png" alt="ноутбук" />
+</div>
+<div class="block">
+          <li class="box">
+            <a href="#" class="link">
+              <img src="./images/portfolio/img-4.png" alt="ноутбук" class="image"/>
+              <div class="box-content">
               <h3 class="title">Проект Prime</h3>
               <p class="subtitle">Маркетинг</p>
               <p class="text">
@@ -119,11 +141,13 @@
                 Компании используют эту платформу для цифрового шпионажа и атак
                 на защищённые сервера конкурентов.
               </p>
+              </div>
             </a>
           </li>
-          <li>
-            <a href="#" class="portfolio-block">
-              <img src="./images/portfolio/img-5.png" alt="ноутбук" />
+          <li class="box">
+            <a href="#" class="link">
+              <img src="./images/portfolio/img-5.png" alt="ноутбук" class="image"/>
+              <div class="box-content">
               <h3 class="title">Проект Boxes</h3>
               <p class="subtitle">Приложение</p>
               <p class="text">
@@ -131,11 +155,13 @@
                 Компании используют эту платформу для цифрового шпионажа и атак
                 на защищённые сервера конкурентов.
               </p>
+              </div>
             </a>
           </li>
-          <li>
-            <a href="#" class="portfolio-block">
-              <img src="./images/portfolio/img-6.png" alt="ноутбук" />
+          <li class="box">
+            <a href="#" class="link">
+              <img src="./images/portfolio/img-6.png" alt="ноутбук" class="image"/>
+              <div class="box-content">
               <h3 class="title">Inspiration has no Borders</h3>
               <p class="subtitle">Веб-сайт</p>
               <p class="text">
@@ -143,11 +169,15 @@
                 Компании используют эту платформу для цифрового шпионажа и атак
                 на защищённые сервера конкурентов.
               </p>
+              </div>
             </a>
           </li>
-          <li>
-            <a href="#" class="portfolio-block">
-              <img src="./images/portfolio/img-7.png" alt="ноутбук" />
+          </div>
+          <div class="block">
+          <li class="box">
+            <a href="#" class="link">
+              <img src="./images/portfolio/img-7.png" alt="ноутбук" class="image"/>
+              <div class="box-content">
               <h3 class="title">Издание Limited Edition</h3>
               <p class="subtitle">Дизайн</p>
               <p class="text">
@@ -155,11 +185,13 @@
                 Компании используют эту платформу для цифрового шпионажа и атак
                 на защищённые сервера конкурентов.
               </p>
+              </div>
             </a>
           </li>
-          <li>
-            <a href="#" class="portfolio-block">
-              <img src="./images/portfolio/img-8.png" alt="ноутбук" />
+          <li class="box">
+            <a href="#" class="link">
+              <img src="./images/portfolio/img-8.png" alt="ноутбук" class="image"/>
+              <div class="box-content">
               <h3 class="title">Проект LAB</h3>
               <p class="subtitle">Маркетинг</p>
               <p class="text">
@@ -167,11 +199,13 @@
                 Компании используют эту платформу для цифрового шпионажа и атак
                 на защищённые сервера конкурентов.
               </p>
+              </div>
             </a>
           </li>
-          <li>
-            <a href="#" class="portfolio-block">
-              <img src="./images/portfolio/img-9.png" alt="ноутбук" />
+          <li class="box">
+            <a href="#" class="link">
+              <img src="./images/portfolio/img-9.png" alt="ноутбук" class="image"/>
+              <div class="box-content">
               <h3 class="title">Growing Business</h3>
               <p class="subtitle">Приложение</p>
               <p class="text">
@@ -179,54 +213,65 @@
                 Компании используют эту платформу для цифрового шпионажа и атак
                 на защищённые сервера конкурентов.
               </p>
+              </div>
             </a>
           </li>
+          </div>
         </ul>
+        </div>
       </section>
     </main>
 
     <!-- footer -->
 
-    <footer class="footer">
-      <a href="#" class="logo"
-        >Web <span class="logo-accent-footer">Studio</span></a
-      >
-      <ul class="list">
-        <li>
-          <p>г. Киев, пр-т Леси Украинки, 26</p>
-        </li>
-        <li>
-          <a href="mailto:nfo@devstudio.com" class="link">info@devstudio.com</a>
-        </li>
-        <li>
-          <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
-        </li>
-      </ul>
-      <h3 class="subscribe">присоединяйтесь</h3>
-      <nav>
-        <ul class="social-list">
-          <li>
-            <a href="https://instagram.com" target="_blank">
-              <img src="./images/main/social/1.svg" alt="инстаграм" />
-            </a>
-          </li>
-          <li>
-            <a href="https://twitter.com" target="_blank">
-              <img src="./images/main/social/2.svg" alt="твиттер" />
-            </a>
-          </li>
-          <li>
-            <a href="https://facebook.com" target="_blank">
-              <img src="./images/main/social/3.svg" alt="фейсбук" />
-            </a>
-          </li>
-          <li>
-            <a href="https://linkedin.com" target="_blank">
-              <img src="./images/main/social/4.svg" alt="линкедин" />
-            </a>
-          </li>
-        </ul>
-      </nav>
-    </footer>
+  <footer class="footer">
+    <div class="container">
+      <div class="content">
+        <div class="adress">
+          <a href="#" class="logo">Web <span class="logo-accent-footer">Studio</span></a>
+          <nav>
+            <ul class="list">
+              <li class="contact">
+                <p>г. Киев, пр-т Леси Украинки, 26</p>
+              </li>
+              <li class="contact">
+                <a href="mailto:nfo@devstudio.com" class="link">info@devstudio.com</a>
+              </li>
+              <li class="contact">
+                <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <div class="subscribe">
+          <h3 class="title">присоединяйтесь</h3>
+          <ul class="social-list">
+            <li>
+              <a href="https://instagram.com" target="_blank" class="social-icon">
+                <img src="./images/main/social/1.svg" alt="инстаграм" />
+              </a>
+            </li>
+            <li>
+              <a href="https://twitter.com" target="_blank" class="social-icon">
+                <img src="./images/main/social/2.svg" alt="твиттер" />
+              </a>
+            </li>
+            <li>
+              <a href="https://facebook.com" target="_blank" class="social-icon">
+                <img src="./images/main/social/3.svg" alt="фейсбук" />
+              </a>
+            </li>
+            <li>
+              <a href="https://linkedin.com" target="_blank" class="social-icon">
+                <img src="./images/main/social/4.svg" alt="линкедин" />
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="copyright">
+        <p class="copyright-text">2020 | Developed by GoIT Students</p>
+      </div>
+  </footer>
   </body>
 </html>
