--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
       <!-- portfolio -->
 
       <section class="portfolio">
-        <div class="content">
+        <div class="container">
         <h1 class="heading">Наши работы</h1>
         <nav>
           <ul class="portfolio nav">
