--- a/portfolio.html
+++ b/portfolio.html
@@ -19,41 +19,28 @@
     <header class="header">
       <div class="container">
         <nav class="header-nav">
-          <a href="#" class="logo"
-            >Web <span class="logo-accent">Studio</span></a
-          >
+          <a href="#" class="logo">Web <span class="logo-accent">Studio</span></a>
           <ul class="nav-list">
             <li class="list">
-              <a href="./index.html" class="link">Студия</a>
+              <a href="./index.html" class="header__link">Студия</a>
             </li>
             <li class="list">
-              <a href="./portfolio.html" class="link current">Портфолио</a>
+              <a href="./portfolio.html" class="header__link--current">Портфолио</a>
             </li>
             <li class="list">
-              <a href="#" class="link">Контакты</a>
+              <a href="#" class="header__link">Контакты</a>
             </li>
           </ul>
         </nav>
         <ul class="contact-list">
           <li class="list">
-            <img
-              src="./images/main/envelope(hover).svg"
-              alt="иконка почты"
-              class="icon"
-            />
-            <a href="mailto:nfo@devstudio.com" class="link-contact"
-              >info@devstudio.com
+            <img src="./images/main/envelope(hover).svg" alt="иконка почты" class="icon" />
+            <a href="mailto:nfo@devstudio.com" class="header__link-contact">info@devstudio.com
             </a>
           </li>
           <li class="list">
-            <img
-              src="./images/main/smartphone.svg"
-              alt="иконка телефона"
-              class="icon"
-            />
-            <a href="tel:+380961111111" class="link-contact"
-              >+38 096 111 11 11
-            </a>
+            <img src="./images/main/smartphone.svg" alt="иконка телефона" class="icon" />
+            <a href="tel:+380961111111" class="header__link-contact">+38 096 111 11 11 </a>
           </li>
         </ul>
       </div>
