--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
           >
           <ul class="nav-list">
             <li class="list">
-              <a href="./index.html" class="link current">Студия</a>
+              <a href="./index.html" class="header__link--current">Студия</a>
             </li>
             <li class="list">
-              <a href="./portfolio.html" class="link">Портфолио</a>
+              <a href="./portfolio.html" class="header__link">Портфолио</a>
             </li>
             <li class="list">
-              <a href="#" class="link">Контакты</a>
+              <a href="#" class="header__link">Контакты</a>
             </li>
           </ul>
         </nav>
@@ -41,7 +41,7 @@
               alt="иконка почты"
               class="icon"
             />
-            <a href="mailto:nfo@devstudio.com" class="link-contact"
+            <a href="mailto:nfo@devstudio.com" class="header__link-contact"
               >info@devstudio.com
             </a>
           </li>
@@ -51,7 +51,7 @@
               alt="иконка телефона"
               class="icon"
             />
-            <a href="tel:+380961111111" class="link-contact">+38 096 111 11 11 </a>
+            <a href="tel:+380961111111" class="header__link-contact">+38 096 111 11 11 </a>
           </li>
         </ul>
       </div>
