--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   </head>
   <body>
     <!-- header -->
+    
     <header class="header">
       <div class="container">
         <nav class="header-nav">
@@ -36,11 +37,6 @@
         </nav>
         <ul class="contact-list">
           <li class="list">
-            <img
-              src="./images/main/envelope(hover).svg"
-              alt="иконка почты"
-              class="icon"
-            />
             <a href="mailto:nfo@devstudio.com" class="header__link-contact"
               >info@devstudio.com
             </a>
@@ -60,9 +56,10 @@
       <!-- hero -->
       <section class="hero">
         <div class="container">
+          <div class="hero-image">
           <h1 class="title">Эффективные решения<br />для вашего бизнеса</h1>
           <a href="#" class="button primary">Заказать услугу</a>
-          <!-- <img src="./images/main/Header-img.png" alt="фон" width="1600" /> -->
+          </div>
         </div>
       </section>
 
